@@ -24,7 +24,7 @@ $RYWINZ->appname="corsaro";
 $RYWINZ->apptitle="Corsaro";
 $RYWINZ->appdescr="Web-based Enterprise Resource Planning";
 $RYWINZ->appversion="v2.0";
-$RYWINZ->copyright="2017 Rodolfo Calzetti";
+$RYWINZ->copyright="2018 Rodolfo Calzetti";
 $RYWINZ->dealer="";
 $RYWINZ->about->content=<<<ABOUT
 <div style="line-height:14px;">
