@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.29    del 05/03/2018
+==================================
+
+ryFamily: corretto un'anomalia introdotta nella verisone v2.0.28
+
+==================================
 Rilascio v2.0.28    del 24/12/2017
 ==================================
 
